--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -378,7 +378,9 @@ dtb-$(CONFIG_MX7) += imx7-colibri.dtb \
 		imx7d-12x12-ddr3-arm2.dtb \
 		imx7d-19x19-ddr3-arm2.dtb \
 		imx7d-19x19-lpddr2-arm2.dtb \
-		imx7d-19x19-lpddr3-arm2.dtb
+		imx7d-19x19-lpddr3-arm2.dtb \
+		imx7d-phyboard-zeta-001.dtb \
+		imx7s-phyboard-zeta-002.dtb
 
 dtb-$(CONFIG_ARCH_MX7ULP) += imx7ulp-evk.dtb \
 		imx7ulp-evk-emmc.dtb \
