--- a/arch/arm/dts/imx7-peb-eval-02.dtsi
+++ b/arch/arm/dts/imx7-peb-eval-02.dtsi
@@ -128,5 +128,5 @@
 	pinctrl-0 = <&pinctrl_uart2>;
 	assigned-clocks = <&clks IMX7D_UART2_ROOT_SRC>;
 	assigned-clock-parents = <&clks IMX7D_PLL_SYS_MAIN_240M_CLK>;
-	status = "okay";
+	status = "disabled";
 };
