--- a/configs/mx7d_pcm061_21x_defconfig
+++ b/configs/mx7d_pcm061_21x_defconfig
@@ -1,7 +1,9 @@
 CONFIG_ARM=y
 CONFIG_ARCH_MX7=y
 CONFIG_TARGET_MX7D_PHYBOARD_ZETA=y
-CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
+#CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
+CONFIG_ARMV7_PSCI=y
+CONFIG_ARMV7_PSCI_NR_CPUS=2
 CONFIG_IMX_RDC=y
 CONFIG_IMX_BOOTAUX=y
 CONFIG_DEFAULT_DEVICE_TREE="imx7d-phyboard-zeta-001"
@@ -11,7 +13,7 @@ CONFIG_BOOTDELAY=3
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_HUSH_PARSER=y
 CONFIG_CMD_BOOTZ=y
-# CONFIG_CMD_IMI is not set
+CONFIG_CMD_IMI=y
 # CONFIG_CMD_IMLS is not set
 # CONFIG_CMD_XIMG is not set
 # CONFIG_CMD_EXPORTENV is not set
@@ -69,3 +71,6 @@ CONFIG_ERRNO_STR=y
 CONFIG_DM_ETH=y
 CONFIG_DM_SPI_FLASH=y
 CONFIG_FSL_QSPI=y
+CONFIG_FIT=y
+#CONFIG_FIT_SIGNATURE=y
+
