U-Boot: Fix initial boot logo support.
Signed-off-by: Leon Woestenberg <leon@sidebranch.com>

--- a/configs/mx7d_pcm061_21x_defconfig
+++ b/configs/mx7d_pcm061_21x_defconfig
@@ -9,7 +9,7 @@ CONFIG_IMX_BOOTAUX=y
 CONFIG_DEFAULT_DEVICE_TREE="imx7d-phyboard-zeta-001"
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/phytec/mx7d_phyboard_zeta/imximage_mt41k256m16tw-107it.cfg,PHYTEC_MT41K256M16TW107IT"
 CONFIG_BOOTDELAY=3
-CONFIG_VIDEO=1
+CONFIG_VIDEO=y
 # CONFIG_CONSOLE_MUX is not set
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_HUSH_PARSER=y
