Reduce I2C speed to 375 kHz, workaround erratum e7805.
Signed-off-by: Leon Woestenberg <leon@sidebranch.com>

--- a/arch/arm/dts/imx7d-phyboard-zeta-001.dts
+++ b/arch/arm/dts/imx7d-phyboard-zeta-001.dts
@@ -12,7 +12,8 @@
 
 #include "imx7-phycore-som.dtsi"	/* Superset - includes all SOM population options */
 #include "imx7-pba-c-09.dtsi"		/* Carrier board */
+#if 0
 #include "imx7-peb-av-02.dtsi"		/* LCD adapter */
 #include "imx7-peb-eval-02.dtsi"	/* Evaluation module */
-
+#endif
 #include "imx7d-pcm-061-2110111c.dtsi"	/* SOM variant */
