--- a/arch/arm/dts/imx7-phycore-som.dtsi
+++ b/arch/arm/dts/imx7-phycore-som.dtsi
@@ -23,7 +23,8 @@
 };
 
 &i2c1 {
-	clock-frequency = <400000>;
+	/* see erratum e7805, reduce I2C speed below 384000 */
+	clock-frequency = <375000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
